# Balls

./: .gitignore  CMakeLists.txt  README.md
src/: Ball.cpp  Ball.hpp  BallAnimator.cpp  BallAnimator.hpp  BallColider.cpp  BallColider.hpp  BallCollider.cpp  BallCollider.hpp  BallMoveAnimator.cpp  BallMoveAnimator.hpp  BallParameters.cpp  BallParameters.hpp  main.cpp
src/animations/: BallAnimator.cpp  BallAnimator.hpp
src/gui/: Ball.cpp  Ball.hpp  BallWidget.cpp  BallWidget.hpp
src/model/: BallParameters.cpp  BallParameters.hpp
ui/: BallColider.ui  BallCollider.ui  BallWidget.ui
